# dataria-py-utils

./: .gitignore  CITATION.cff  README.md  pyproject.toml
dataria/: CHRON.py  DATA.py  GEO.py  MATH.py  __init__.py  setup.py
dataria/GEO/: explore.py
dataria/dataria.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: conf.py  index.md  requirements.txt
