[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataria"
version = "0.1.0"
description = "DATAria utils"
authors = [
    { name = "Christoph Sander" }
]
requires-python = ">=3.6"
dependencies = [
    "SPARQLWrapper",
    "geopandas",
    "shapely",
    "folium",
    "matplotlib",
    "mapclassify",
    "plotly",
    "seaborn",
    "pandas",
    
]

[tool.setuptools.packages.find]
where = ["."]